--- a/spinnerwheel/src/main/AndroidManifest.xml
+++ b/spinnerwheel/src/main/AndroidManifest.xml
@@ -4,12 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
-        <activity
-            android:name="com.example.spinnerwheel.MainActivity"
-            android:label="@string/app_name" >
-        </activity>
+        android:label="test" >
     </application>
 
 </manifest>
