Updating to build 19.1+, gitignore, added list view animations library and modified to delete to send the view, to get the parent view for the hash map

--- a/tdlgradle/build.gradle
+++ b/tdlgradle/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.9.+'
+        classpath 'com.android.tools.build:gradle:0.11.+'
     }
 }
 
@@ -13,27 +13,28 @@ repositories {
     mavenCentral()
 }
 dependencies {
-    compile 'com.android.support:support-v4:18.0.0'
-    compile 'com.android.support:appcompat-v7:18.0.+'
-    compile 'com.nhaarman.listviewanimations:library:2.6.0'
+    compile 'com.android.support:support-v4:19.+'
+    compile 'com.android.support:appcompat-v7:19.+'
     compile 'com.nineoldandroids:library:2.4.0'
-    compile project(":spinnerwheel")
+    compile project(':spinnerwheel')
+    compile project(':listviewanimations')
 }
 
 android {
     compileSdkVersion 19
-    buildToolsVersion '19.0.0'
-
+    buildToolsVersion '19.1.0'
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 19
         versionCode 1
-        versionName "1.0"
+        versionName '1.0'
     }
     buildTypes {
         release {
             runProguard false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
+    }
+    productFlavors {
     }
 }
