--- a/tdlgradle/src/main/AndroidManifest.xml
+++ b/tdlgradle/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:icon="@drawable/ic_launcher"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.ac.tdl.HomeActivity"
+            android:name="com.ac.tdl.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
